src/styles/boilerplate/override.scss
// Overrides for Foundry and Lancer
.la-svelte
{
    height: inherit;
    display: inherit;
    flex-direction: inherit;
}

// Use default theme colors for the tooltip, 
// since they're declared at the Foundry root level
// and tooltips appear outside of the sheet
#tooltip.la-tooltip,
aside.la-tooltip.active
{
    padding: unset;
    border-color: var(--primary-color);
    background-color: var(--invade-color);
    text-align: left;
        
    >.la-tooltip__content
    {    
        padding: 3px;
        padding-left: 10px;
        padding-right: 10px;
    }
    
    h3
    {    
        margin: unset;
        border: unset;
        background-color: var(--primary-color);
        box-shadow: inset 0px 0px 2px 0px var(--background-color);
        text-transform: uppercase;
        padding: 5px;
    }

    &.-wide
    {
        max-width: 500px;
    }

    &.-scrollbar
    {
        overflow-y: auto;
        max-height: 500px;
        scrollbar-width: thin;
        scrollbar-color: var(--primary-color) var(--invade-color);
    }

    // TODO: find a better way to reimplement this
    &.-widthfull
    {
        width: 100%;
    }
}

// This is so oddly specific becuase Monk's Little Details adds an oddly specific 
// border CSS rule for some reason and dominance must be asserted :triumph:
.system-lancer
{
    div.la-override__header
    {
        header.window-header
        {
            background-color: var(--primary);
            border: unset;
        }
    }
}
.window-content:has(>.la-root)
{
    padding: inherit;
    overflow: hidden;
}

.lancer.sheet header:not(.window-header).la-header
{
    margin: unset;
    // Somewhat redundant, but just to stay mutually exclusive from the default sheets
    background-color: var(--primary); // Since this is above the actual sheets, it needs to be hard coded here
}

.lancer.sheet body:not(.window-body).la-body
{
    // Somewhat redundant, but just to stay mutually exclusive from the default sheets
    background-color: var(--background);
}

.la-root
{
    height: 100%;

    img
    {
        border: unset;
    }

    input
    {
        border: unset;
        padding: unset;
        background: unset;
        clip-path: unset;
        -webkit-clip-path: unset;
    }

    // Slider override when 'la-range' is added to input element
    // Note that Chrome and Firefox definitions are separated intentionally
    // and it does not work if they share selectors (idk why)
    .la-range
    {
        ::-webkit-slider-thumb
        {
            width: 12px;
            height: 12px;
            background: var(--primary);
            box-shadow: unset;
            border: 3px solid var(--header);
            border-radius: 50%;
            cursor: pointer;
        }

        ::-moz-range-thumb
        {
            width: 8px;
            height: 8px;
            background: var(--primary);
            box-shadow: unset;
            border: 3px solid var(--header);
            border-radius: 50%;
            cursor: pointer;
        }
    
        ::-webkit-slider-runnable-track
        {
            height: 4px;
            background: var(--header);
            border: unset;
            box-shadow: unset;
            padding-left: 2px;
            padding-right: 2px;
            border-radius: 2px;
        }

        ::-moz-range-track
        {
            height: 4px;
            background: var(--header);
            border: unset;
            box-shadow: unset;
            padding-left: 2px;
            padding-right: 2px;
            border-radius: 2px;
        }
    }

    button
    {
        width: unset;
        border: unset;
        border-radius: unset;
        padding: unset;
        background: unset;
        box-shadow: unset;
        line-height: unset;
        color: unset;
        margin: unset;

        &:hover
        {
            box-shadow: unset;
        }

        i
        {
            margin-right: unset;
            vertical-align: middle;
        }
    }

    h1
    {
        border-bottom: unset;
        margin: unset;
        font-weight: unset;
    }

    i
    {
        // font-size: inherit;
        vertical-align: middle;
    }

    header.sheet-header img
    {
        margin-right: unset;
    }

    // Lancer overrides under this sheet
    .roll-attack,
    .roll-tech
    {
        flex-direction: unset;
        justify-content: unset;
        align-items: unset;
        flex-grow: unset;
        margin: unset;
        min-width: unset;
        height: unset;
        border: unset;
        border-radius: unset;
        box-shadow: unset;
        position: unset;
    }

    .roll-damage
    {
        margin: unset;
    }

    .compact-damage
    {
        margin: unset;
    }

    .core-power-toggle
    {
        cursor: pointer;
        margin: unset !important;
        width: unset;
        height: unset;

        &:checked::before
        {
            content: "\F12A3";
        }

        &:not(:checked)::before
        {
            content: "\F125E";
            color: currentColor;
        }
    }

    .loaded-hex,
    .uses-hex,
    .power-uses-hex,
    .counter-hex,
    .charged-hex
    {
        font-size: unset;
        color: unset;
    }

    .counter-hex
    {
        filter: unset;
    }

    .compact-tag-row
    {
        margin: unset;
    }

    .clicker-minus-button,
    .clicker-plus-button
    {
        min-width: unset;
        width: unset;
        height: unset;
        background-color: unset;
        color: unset;
        border: unset;
        box-shadow: unset;
        line-height: unset;
    }

    .profile-img
    {
        font-size: unset;
        min-width: unset;
        max-width: unset;
        min-height: unset;
        max-height: unset;
        object-fit: unset;
    }

    .lancer-damage-button-group
    {
        >.lancer-damage-apply
        {
            border-radius: 0px 4px 4px 0px;
            border-color: var(--secondary);
            border-width: 1px 1px 1px 0px;
            border-style: solid;
            background-color: var(--weapon);
            padding-left: 0.25rem;
            padding-right: 0.25rem;
        }
        
        >.lancer-damage-apply-select
        {
            border-radius: 4px 0px 0px 4px;
            border-color: var(--secondary);
            background-color: var(--secondary);
            color: var(--header);
        }
    }

    .mini-weapon-profile
    {
        background-color: var(--card-back);
        color: var(--text);
    }

    .lancer-mini-header
    {
        background-color: var(--pilot);
        color: var(--header);
    }

    .lancer-damage-flow
    {
        background-color: var(--secondary);
        color: var(--header);
    }

    .lancer-header
    {
        background-color: var(--primary);
        color: var(--header);
    }

    .compact-tag
    {
        background-color: var(--primary);
        color: var(--header);

        >i
        {
            color: var(--header);
        }
    }
}

